# rust-argon2-ffi

./: Cargo.toml  README.md
examples/: examples.cabal
examples/src/: Argon2.hs
examples/test/: Argon2Spec.hs
src/: lib.rs
