name:                examples
version:             0.1.0.0
homepage:            https://github.com/sru-systems/rust-argon2-ffi
license:             MIT
license-file:        LICENSE
author:              Martijn Rijkeboer
maintainer:          mrr@sru-systems.com
copyright:           Copyright (c) 2017 Martijn Rijkeboer
category:            Crypto
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Argon2
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
  extra-libraries:     argon2_ffi
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Argon2Spec
  build-depends:       base
                     , bytestring
                     , examples
                     , hspec
                     , text
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

